<?xml version="1.0" encoding="utf-8"?>

<menu
        xmlns:android="http://schemas.android.com/apk/res/android">

    <item   android:id="@+id/menu_home"
            android:title="@string/home"
            android:icon="@drawable/ic_menu_home"
            />

    <item   android:id="@+id/menu_reload"
            android:title="@string/reload"
            android:icon="@drawable/ic_menu_reload"
            />

    <item   android:id="@+id/menu_setting"
            android:title="@string/setting"
            android:icon="@drawable/ic_menu_setting"
            />

    <item   android:id="@+id/menu_users"
            android:title="@string/users"
            android:icon="@drawable/ic_menu_users"
            android:visible="false"
            />

    <item   android:id="@+id/menu_compose"
            android:title="@string/compose"
            android:icon="@drawable/ic_menu_compose"
            android:showAsAction="always"
            />

    <item   android:id="@+id/menu_logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_menu_logout"
            />

    <item   android:id="@+id/menu_about"
            android:title="@string/about"
            android:icon="@drawable/ic_menu_about"
            />
</menu>